test/tasty/neg/src-2/TestHKNest5.check
TestHKNest5_fail.scala:7: error: kinds of the type arguments (tastytest.TestHKNest.Show) do not conform to the expected kinds of the type parameters (type F) in class HKClass_4.
tastytest.TestHKNest.Show's type parameters do not match type F's expected parameters:
type T is contravariant, but type _ is declared covariant
  def test4 = new HKClass_4[Show]
      ^
TestHKNest5_fail.scala:7: error: kinds of the type arguments (tastytest.TestHKNest.Show) do not conform to the expected kinds of the type parameters (type F) in class HKClass_4.
tastytest.TestHKNest.Show's type parameters do not match type F's expected parameters:
type T is contravariant, but type _ is declared covariant
  def test4 = new HKClass_4[Show]
                  ^
TestHKNest5_fail.scala:8: error: kinds of the type arguments (List) do not conform to the expected kinds of the type parameters (type F) in class HKClass_5.
List's type parameters do not match type F's expected parameters:
type A is covariant, but type _ is declared contravariant
  def test5 = new HKClass_5[List]
      ^
TestHKNest5_fail.scala:8: error: kinds of the type arguments (List) do not conform to the expected kinds of the type parameters (type F) in class HKClass_5.
List's type parameters do not match type F's expected parameters:
type A is covariant, but type _ is declared contravariant
  def test5 = new HKClass_5[List]
                  ^
4 errors
